--- a/main.html
+++ b/main.html
@@ -8,6 +8,45 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="/submit" method="post">
+        <label for="name">Name*</label>
+        <input type="text" id="name" required placeholder="Name"><br><br>
+
+        <label for="email">Email*</label>
+        <input type="email" id="email" required placeholder="Email"><br><br>
+
+        <label for="cars">Car Brands*</label>
+        <select name="car_brands" id="cars" required>
+            <option value=" ">--Please choose an option-</option>
+            <option value="BMW">BMW</option>
+            <option value="Audi">Audi</option>
+            <option value="Mercedez">Mercedez</option>
+        </select><br><br>
+
+        <label for="gender" >Gender*</label>
+        <input type="radio" name="gender" id="gender_m">
+        <label for="gender_m">Male</label>
+        <input type="radio" name="gender" id="gender_f">
+        <label for="gender_f">Female</label><br><br>
+        
+        <label for="age">Age*</label>
+        <input type="text" id="age" name="age" required placeholder="Age"><br><br>
+
+        <label for="dob">Dob*</label>
+        <input type="date" name="age" id="age" required><br><br>
+
+        <label for="tel">Phone Number</label>
+        <input type="tel" name="tel" id="tel" placeholder="xxx-xxx-xxxx"><br><br>
+
+        <label for="password">Password*</label>
+        <input type="password" name="password" id="password" required placeholder="Password"><br><br>
+
+        <label for="tos">I agree to the TOS</label>
+        <input type="checkbox" name="tos" id="tos"><br><br>
+
+        <input type="button" value="Submit">
+        
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
