--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="/submit" method="post">
+	<form action="/action_page.php" method="get" id="nameform">
         <label for="name">Name*</label>
         <input type="text" id="name" required placeholder="Name"><br><br>
 
@@ -24,15 +24,15 @@
         </select><br><br>
 
         <label for="gender" >Gender*</label>
-        <input type="radio" name="gender" id="gender_m">
+        <input type="radio" name="gender" id="gender_m" required="required">
         <label for="gender_m">Male</label>
-        <input type="radio" name="gender" id="gender_f">
+        <input type="radio" name="gender" id="gender_f" required="required">
         <label for="gender_f">Female</label><br><br>
         
         <label for="age">Age*</label>
         <input type="text" id="age" name="age" required placeholder="Age"><br><br>
 
-        <label for="dob">Dob*</label>
+        <label for="dob">DOB*</label>
         <input type="date" name="age" id="age" required><br><br>
 
         <label for="tel">Phone Number</label>
@@ -44,7 +44,7 @@
         <label for="tos">I agree to the TOS</label>
         <input type="checkbox" name="tos" id="tos"><br><br>
 
-        <input type="button" value="Submit">
+        <button type="submit" form="nameform" value="Submit">Submit</button>
         
     </form>
     <script type="text/javascript" src="./script.js">
