--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form action="/action_page.php" method="get" id="nameform">
+	<form  method="post">
         <label for="name">Name*</label>
         <input type="text" id="name" required placeholder="Name"><br><br>
 
@@ -44,9 +44,10 @@
         <label for="tos">I agree to the TOS</label>
         <input type="checkbox" name="tos" id="tos"><br><br>
 
-        <button type="submit" form="nameform" value="Submit">Submit</button>
+        <button type="submit">Submit</button>
         
     </form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
