--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <input type="text" id="age" name="age" required placeholder="Age"><br><br>
 
         <label for="dob">DOB*</label>
-        <input type="date" name="age" id="age" required="required"><br><br>
+        <input type="date" name="dob" id="dob" required><br><br>
 
         <label for="tel">Phone Number</label>
         <input type="tel" name="tel" id="tel" placeholder="xxx-xxx-xxxx"><br><br>
